[project]
name = "ignition-tag-api"
version = "0.1.0"
description = "Secure Web Dev API for realtime and historical Ignition tag data retrieval"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Your Name", email = "your.email@example.com"}]
keywords = ["ignition", "scada", "api", "grafana", "historian", "realtime"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "ignition-api>=8.3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ignition-tag-api"
Documentation = "https://github.com/yourusername/ignition-tag-api#readme"
Repository = "https://github.com/yourusername/ignition-tag-api"
Issues = "https://github.com/yourusername/ignition-tag-api/issues"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
